# avian-biosurveillance

./: .gitignore  README.md  pyproject.toml  todo.md
data/test_ingest/: counts_2026-01-28.json  daily_counts_2026-01-28.jsonl
docs/: README.md  avian_biosurveillance.data.rst  conf.py  index.rst  make.bat
docs/_build/html/: .buildinfo  avian_biosurveillance.data.html  avian_biosurveillance.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: avian_biosurveillance.data.doctree  avian_biosurveillance.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/_sources/: avian_biosurveillance.rst.txt  modules.rst.txt
notebooks/: 01_acoustic_vs_visual_seasonality.ipynb
reports/Literature review/: literature_study.tex
research/references/: references.md
research/reports/: Literature Review.tex
research/reports/Literature review/AI Generated/: Literature review on Acoustic Detection and Tracki.md
resources/presentation/: idea.md
resources/research/: Literature Review.md  README.md
resources/research/literature review/: references.bib
resources/system design/: system design plan.md
src/avian_biosurveillance/: __init__.py
src/avian_biosurveillance/data/: download.py
src/avian_biosurveillance/ingestion/: README.md  birdweather.py
src/avian_biosurveillance/ingestion - delete/avian_biosurveillance/: run_pipeline.py
src/avian_biosurveillance/ingestion - delete/avian_biosurveillance/config/: settings.py
src/avian_biosurveillance/ingestion - delete/avian_biosurveillance/ingestion/: __init__.py  base.py  birdweather.py  knmi_weather.py  mortality_surveillance.py  xeno_canto.py
tests/data/: test_download.py
tests/ingestion/: test_birdweather.py
