[project]
name = "avian-biosurveillance"
version = "0.1.0"
description = "Detect avian disease outbreaks in real-time by analyzing bird calls and population patterns through machine learning"
authors = [{ name = "Soheil", email = "soheil.mpg@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "avian",
    "biosurveillance",
    "bird-calls",
    "disease-detection",
    "machine-learning",
    "bioacoustics",
    "epidemiology",
    "wildlife-monitoring",
    "real-time-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.1,<3",
    "numpy>=1.26,<3",
    "geopy>=2.4,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "scikit-learn>=1.4,<2",
    "statsmodels>=0.14,<1",
    "ipykernel>=7.0,<8",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/soheil-mp/avian-biosurveillance"
Repository = "https://github.com/soheil-mp/avian-biosurveillance"
Documentation = "https://github.com/soheil-mp/avian-biosurveillance#readme"
Issues = "https://github.com/soheil-mp/avian-biosurveillance/issues"
Changelog = "https://github.com/soheil-mp/avian-biosurveillance/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "avian_biosurveillance", from = "src" }]

# === Formatting & Linting ===

[tool.poetry.group.dev.dependencies]
sphinx = "<9"
sphinx-rtd-theme = "^3.1.0"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["notebooks", "data", "models", "*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "PD",    # pandas-vet
    "NPY",   # numpy-specific rules
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (catch debug prints)
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "S101",   # assert usage (fine in tests)
    "PD901",  # df as variable name (common in data science)
]

[tool.ruff.lint.isort]
known-first-party = ["avian_biosurveillance"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]              # unused imports in __init__
"tests/**/*.py" = ["S101", "ARG001"]  # asserts and fixtures allowed
"notebooks/**/*.py" = ["T20", "E402"] # prints and import order in notebooks

# === Testing ===

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["avian_biosurveillance"]
branch = true
parallel = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@abstractmethod",
    "\\.\\.\\.",
]

# === Type Checking ===

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
pretty = true
show_error_codes = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "statsmodels.*",
    "seaborn.*",
    "geopy.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_missing_imports = true